# Pico_grblHAL_for_PD42S1

./: CMakeLists.txt  PD42S1_用户手册文本.txt  Pico2w(RP2350)适配PD42S1驱动器脉冲模式引脚定义V1.2.txt  README.md  driver.c  driver.h  machine.xml  main.c  my_machine.h  pd42s1_config.gcode  pd42s1_test.gcode  vision-settings.xml  引脚定义.md
bluetooth/: hc_05.c
boards/: pico_pd42s1_map.h
grbl/: README.md  changelog.md  config.h  grbl.h  modbus_rtu.c  report.c  state_machine.c  stream.c  stream.h  strutils.c  strutils.h  system.h
plasma/: thc.c
plugins/: CMakeLists.txt  COPYING  README.md  bltouch.c  esp_at.c  eventout.c  feed_override_m220.c  fnc_expander.c  homing_pulloff.c  mcp3221.c  mcp4725.c  pca9654e.c  probe_relays.c  pwm_servo_m280.c  rgb_led_m150.c  tooltable.c
